--- a/neural_network/1_hidden/784_128_10/STM32CubeMX/STM32CubeMX/STM32CubeMX.ioc
+++ b/neural_network/1_hidden/784_128_10/STM32CubeMX/STM32CubeMX/STM32CubeMX.ioc
@@ -52,6 +52,7 @@ PA12.Signal=USB_OTG_FS_DP
 Mcu.UserConstants=
 RCC.DIVP3Freq_Value=16125000
 RCC.SDMMCFreq_Value=48000000
+PF5.Locked=true
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=64000000
 RCC.I2C4Freq_Value=64000000
@@ -60,21 +61,21 @@ ProjectManager.PreviousToolchain=
 RCC.SPDIFRXFreq_Value=48000000
 PD8.GPIOParameters=GPIO_Label
 RCC.DIVQ3Freq_Value=16125000
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
+Mcu.Pin6=PC1
+Mcu.Pin7=PA1
 PD8.Signal=USART3_TX
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
+Mcu.Pin8=PA2
+Mcu.Pin9=PA7
 PE1.Signal=GPIO_Output
 PB13.Locked=true
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
 RCC.HRTIMFreq_Value=64000000
-Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin4=PH1-OSC_OUT (PH1)
+Mcu.Pin3=PF5
+Mcu.Pin4=PH0-OSC_IN (PH0)
 PD10.GPIOParameters=GPIO_Label
-Mcu.Pin5=PC1
+Mcu.Pin5=PH1-OSC_OUT (PH1)
 ProjectManager.ProjectBuild=false
 RCC.DIVR3Freq_Value=16125000
 RCC.HSE_VALUE=8000000
@@ -124,6 +125,7 @@ RCC.DFSDMFreq_Value=64000000
 RCC.DIVR1Freq_Value=96000000
 PB14.GPIOParameters=GPIO_Label
 Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
+PF5.Signal=GPIO_Output
 PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 RCC.TraceFreq_Value=64000000
 RCC.APB4Freq_Value=64000000
@@ -153,7 +155,7 @@ PG7.Locked=true
 PA7.Mode=RMII
 PG7.Signal=GPXTI7
 PD9.GPIO_Label=STLINK_TX
-Mcu.PinsNb=31
+Mcu.PinsNb=32
 Dma.USART3_RX.0.SyncRequestNumber=1
 ProjectManager.NoMain=false
 PC13.Locked=true
@@ -213,9 +215,10 @@ PC13.GPIOParameters=GPIO_Label
 RCC.FDCANFreq_Value=48000000
 PG7.GPIO_Label=USB_OTG_FS_OVCR
 RCC.RNGFreq_Value=48000000
-Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin30=PE1
 RCC.ADCFreq_Value=16125000
 VP_SYS_VS_Systick.Mode=SysTick
+Mcu.Pin31=VP_SYS_VS_Systick
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.FreePins=false
@@ -223,28 +226,28 @@ RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32H743ZITx
 RCC.LPTIM2Freq_Value=64000000
-Mcu.Pin26=PA12
-Mcu.Pin27=PG11
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
 PA2.Signal=ETH_MDIO
-Mcu.Pin24=PA9
+Mcu.Pin24=PA8
 ProjectManager.UnderRoot=false
-Mcu.Pin25=PA11
+Mcu.Pin25=PA9
 PB2.Locked=true
-Mcu.Pin28=PG13
+Mcu.Pin28=PG11
 Mcu.IP6=USART3
-Mcu.Pin29=PE1
+Mcu.Pin29=PG13
 Dma.USART3_RX.0.RequestNumber=1
 Mcu.IP7=USB_OTG_FS
 ProjectManager.CoupleFile=false
 RCC.SYSCLKFreq_VALUE=64000000
-Mcu.Pin22=PG7
+Mcu.Pin22=PD10
 Dma.USART3_RX.0.Priority=DMA_PRIORITY_HIGH
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 RCC.I2C123Freq_Value=64000000
-Mcu.Pin23=PA8
+Mcu.Pin23=PG7
 PA1.Locked=true
-Mcu.Pin20=PD9
-Mcu.Pin21=PD10
+Mcu.Pin20=PD8
+Mcu.Pin21=PD9
 PD10.Locked=true
 PA12.Mode=Device_Only
 NVIC.ForceEnableDMAVector=true
@@ -255,23 +258,23 @@ ProjectManager.CompilerOptimize=6
 PG11.Mode=RMII
 PA11.Signal=USB_OTG_FS_DM
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB12
+Mcu.Pin15=PB11
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin16=PB12
 Dma.USART3_RX.0.SignalID=NONE
-Mcu.Pin16=PB13
-Mcu.Pin13=PB2
-Mcu.Pin14=PB11
-Mcu.Pin19=PD8
+Mcu.Pin13=PB1
+Mcu.Pin14=PB2
+Mcu.Pin19=PB15
 RCC.LPTIM345Freq_Value=64000000
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
 RCC.LTDCFreq_Value=16125000
 RCC.SAI4AFreq_Value=48000000
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin10=PC5
+Mcu.Pin11=PC5
+Mcu.Pin12=PB0
+Mcu.Pin10=PC4
 RCC.DIVQ1Freq_Value=48000000
 PA2.Mode=RMII
 PA8.Mode=Activate_SOF_FS
